@startuml

class Car {
    -_id: String
    -_model: String
    -_brand: String
    +Car(String, String, String)
    +getId(): String
    +getModel(): String
    +getBrand(): String
}

class CarFormatter {
    +getCarsNames(Car): String
}

class CarStatistics {
    +getBestCar(List<Car>): Car
}

class DBManager {
    +getFakeApi(): List<Car>
    +getFromDb(String, List<Car>): Car
}

Car <-- CarFormatter
Car <-- CarStatistics
Car <-- DBManager

@enduml